# python-libreoffice-numpy

./: Makefile  README.md  cspell.json  make.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/res/defaults/: registrymodifications.xcu
macro/: numpy_ex.py
oxt/: py_runner.py
oxt/___lo_pip___/: basic_config.py  config.py
oxt/___lo_pip___/dialog/: message_dialog.py
oxt/___lo_pip___/dialog/handler/: install.py  logger_options.py  options.py  uninstall.py
oxt/___lo_pip___/install/: requirements_check.py
oxt/___lo_pip___/install/pkg_installers/: install_pkg.py
oxt/___lo_pip___/install/py_packages/: packages.py
oxt/___lo_pip___/settings/: install_settings.py  load_settings.py  options.py
oxt/___lo_pip___/ver/rules/: carrot.py  ver_rules.py
oxt/config/: config.xcs  config.xcu  options.xcu
oxt/dialogs/: install.xdl  options.xdl
oxt/resources/: pipstrings_de.properties  pipstrings_el.properties  pipstrings_en_US.properties  pipstrings_es.properties  pipstrings_fr.properties  pipstrings_hu.properties  pipstrings_it.properties  pipstrings_ja.properties  pipstrings_ko.properties  pipstrings_nl.properties  pipstrings_pt.properties  pipstrings_zh.properties
src/: config.py
src/processing/: json_config.py  token.py
tests/: conftest.py
tests/dummy/: oxt_logger_dummy.py
tests/general_tests/: test_packages.py
tests/test_rules/: test_carrot.py  test_equals.py  test_greater.py  test_lesser_equal.py  test_tilde_eq.py  test_ver_rules.py
