[project]
name = "lo-numpy"
version = "2.0.0"
description = "Numpy for LibreOffice"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["numpy", "libreoffice","uno", "pyuno"]
dependencies = [
    "numpy>=1.2.4",
]
authors = [
    {name = ":Barry-Thomas-Paul: Moss", email = "bigbytetech@gmail.com"}]
packages = [
    { include = "oooscript" }
]


[tool.oxt.requirements]
numpy = ">=1.2.4"


# See: https://github.com/Amourspirit/python-libreoffice-numpy-ext/wiki/pyproject.toml
[tool.oxt.config]
auto_install_in_site_packages = true
build_dir = "build"
dist_dir = "tmp_dist" # should be changed to someting like dist, tmp_dist is not included in git
install_wheel = true
oxt_name = "numpy"
py_pkg_dir = "py_pkgs"
py_pkg_files = []
py_pkg_names = [] # ["ooodev", "ooo"]
token_file_ext = ["txt", "xml", "xcu", "xcs", "py"]
update_file = "update.xml"
zip_preinstall_pure = true
window_timeout = 5 # number of seconds to wait for window to appear
dialog_desktop_owned = false # determines if the dialog is owned by the desktop window
resource_dir_name = "resources"
resource_properties_prefix = "pipstrings"
default_locale = ["en", "US"]
sym_link_cpython = true # https://tinyurl.com/ymeh4c9j#sym_link_cpython
uninstall_on_update = true # https://tinyurl.com/ymeh4c9j#uninstall_on_update uninstall previous python packages on update
install_on_no_uninstall_permission = true # https://tinyurl.com/ymeh4c9j#install_on_no_uninstall_permission

[tool.oxt.token]
# in the form of "token_name": "token_value"
# in the files the token will have a prefix and suffix of ___
pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7c155f4753da8833ac06a5c704c109313b8d5a62968a/pip-23.2.1-py3-none-any.whl"
test_internet_url = "https://duckduckgo.com"
log_pip_installs = false
lo_identifier = "org.openoffice.extensions.numpy"
lo_implementation_name = "NumpyRunner"
display_name = "Numpy for LibreOffice"
description = "The fundamental package for scientific computing with Python"
publisher = "AmourSpirit"
publisher_url = "https://github.com/Amourspirit/python-libreoffice-numpy-ext"
update_url_xml = "https://raw.githubusercontent.com/Amourspirit/python-libreoffice-numpy-ext/main/___dist_dir___/___update_file___"
update_url_oxt = "https://raw.githubusercontent.com/Amourspirit/python-libreoffice-numpy-ext/main/___dist_dir___/___oxt_name___.oxt"
url_pip = 'https://bootstrap.pypa.io/get-pip.py'
# set log_file to "" to disable logging
log_file = "numpy_install.log"
log_name = "Numpy Installer"
log_level = "DEBUG" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_add_console = false # should be false for production
lo_pip = "lo_pip_numpy"
platform = "all"
startup_event = "OnStartApp" # OnStartApp or onFirstVisibleTask
show_progress = true
delay_startup = true # determines if installing waits fo the window to load before installing

[project.urls]
Extension = "https://extensions.libreoffice.org/en/extensions/show/41995"
Repository = "https://github.com/Amourspirit/python-libreoffice-numpy-ext"
Issues = "https://github.com/Amourspirit/python-libreoffice-numpy-ext/issues"

[dependency-groups]
dev = [
    "lxml>=5.3.0",
    "ooo-dev-tools>=0.50.0",
    "packaging>=24.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "toml>=0.10.2",
    "typing-extensions>=4.12.2",
    "oooenv>=0.2.4",
]


[tool.oxt.isolate]
windows = ["numpy"]

[tool.oxt.preinstall.pure]
# verr = ">=1.1.2"

[tool.oxt.locale.publisher]
en = { name = "___publisher___", url="___publisher_url___" }

[tool.oxt.locale.name]
en = "___display_name___"
fr = "Numpy pour LibreOffice"
de = "Numpy für LibreOffice"
pt = "Numpy para LibreOffice"
es = "Numpy para LibreOffice"

[tool.oxt.locale.desc]
en = "___description___"
fr = "Le paquet fondamental pour le calcul scientifique avec Python"
de = "Das grundlegende Paket für wissenschaftliches Rechnen mit Python"
pt = "O pacote fundamental para computação científica com Python"
es = "El paquete fundamental para la computación científica con Python"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "build/**/*",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    no-name-in-module,
    no-self-argument
"""

[tool.pyright]
include = ["src"]
reportMissingModuleSource = false

[tool.ruff]
extended-select = ["ANN", "C4", "N", "SIM", "TCH"]
ignore = ["E501"]
show-fixes = true
target = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]

markers = [
    "skip_headless: skips a test in headless mode",
    "skip_not_headless_os: skips a test in GUI mode for give os",
]
